modules/gdscript/tests/scripts/analyzer/errors/nullable_method_call.gd
class A:
    func bar():
        pass

func test():
    var foo: A? = null
    foo.bar()